--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1987,24 +1987,26 @@ input, select, textarea {
 /* Wrappers */
 
 	.wrapper {
-		background-image: url("images/bg.png");
 		box-shadow: inset 0px 1px 0px 0px rgba(0, 0, 0, 0.05), inset 0px 2px 3px 0px rgba(0, 0, 0, 0.1);
 		padding: 8em 0 8em 0;
 		text-align: center;
 	}
 
 		.wrapper.style1 {
-			background-image: none;
+			background-color: #f8f9d2;
+			background-image: linear-gradient(315deg, #f8f9d2 0%, #e8dbfc 74%);
 			background-color: #fff;
 		}
 
 		.wrapper.style2 {
-			background-color: #fafafa;
+			background-color: #f1dfd1;
+			background-image: linear-gradient(315deg, #f1dfd1 0%, #f6f0ea 74%);
 			text-shadow: 1px 1px 0px #fff;
 		}
 
 		.wrapper.style3 {
-			background-color: #f4f4f4;
+			background-color: #ffffff;
+			background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
 			text-shadow: 1px 1px 0px #fff;
 		}
 
