--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,15 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,600,600italic,700");
 @import url("fontawesome-all.min.css");
 
+
+
+
+#project img,
+#blog img{
+	height: 20rem;
+}
+
+
 /*
 	Miniport by HTML5 UP
 	html5up.net | @ajlkn
